--- a/src/components/EVTrackerFunctions/EVTrackerFunctions.scss
+++ b/src/components/EVTrackerFunctions/EVTrackerFunctions.scss
@@ -17,6 +17,8 @@
   font-weight: 600;
   cursor: pointer;
   flex: 1;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 
   transition:
     background-color 100ms ease-in-out,
@@ -25,6 +27,8 @@
   &:hover {
     background-color: $blue;
     color: white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 
   &:last-child {
