--- a/src/components/EVTrackerListNode/EVTrackerListNode.scss
+++ b/src/components/EVTrackerListNode/EVTrackerListNode.scss
@@ -7,7 +7,8 @@
   align-items: center;
 
   &-name {
-    flex: 2;
+    flex: 3;
+    color: $gray4;
   }
 
   &-remove {
@@ -28,6 +29,27 @@
     &:hover {
       background-color: transparent;
       color: $red;
+    }
+  }
+
+  &-increment {
+    flex: 1;
+    border: 1px solid $blue;
+    background-color: $blue;
+    padding: 0.5em;
+    margin-right: 0.5em;
+    border-radius: 2px;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+
+    transition:
+      background-color 100ms ease-in-out,
+      color 100ms ease-in-out;
+
+    &:hover {
+      background-color: transparent;
+      color: $blue;
     }
   }
 }
